mc-service.yml
apiVersion: v1
kind: Service
metadata:
    name: mc-service
spec:
    selector:
        app: mc-service
    type: NodePort
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080
